<resources>
    <string name="app_name">Financial Forecasting</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="hint_email_mandatory">email*</string>
    <string name="hint_password_mandatory">password*</string>
    <string name="login_message">Login</string>
    <string name="register_message">Register</string>
    <string name="hint_confirm_password_mandatory">confirm password*</string>
    <string name="no_account">No account available? Click to Register</string>
    <string name="go_to_register">Go to register</string>
    <string name="main">Main</string>
    <string name="favourites">Favourites</string>
    <string name="feedback">Feedback</string>
    <string name="admin_actions_title">Actions</string>
    <string name="logout_message">Logout</string>
    <string name="sample_email">sample@gmail.com</string>
    <string name="user_profile">User Profile</string>
    <string name="welcome">Welcome</string>
    <string name="username">Username</string>
    <string name="message_creation_date_label">Creation Date:</string>
    <string name="sample_creation_date">12–12–2020 12:00:00</string>
    <string name="sample_message_request">Sample message request</string>
    <string name="message_request_label">Message Request:</string>
    <string name="message_response_label">Message Response:</string>
    <string name="message_response_mandatory">Response*</string>
    <string name="save_message">Save</string>
    <string name="add_new_feedback_message">Add new feedback message</string>
    <string name="message_request_mandatory">Request*</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="message">Message</string>
    <string name="sample_message_response">Sample message response</string>
    <string name="no_response_received">No response yet!</string>
    <string name="sample_company_name">Company Name</string>
    <string name="sample_company_symbol">XYZ</string>
    <string name="hint_name_mandatory">Name*</string>
    <string name="add_company_string">Add Company</string>
    <string name="hint_symbol_mandatory">SYMBOL*</string>
    <string name="hint_description_mandatory">Description*</string>
    <string name="hint_founded_year_mandatory">Founded Year*</string>
    <string name="hint_url_link_mandatory">Url Link*</string>
    <string name="hint_url_logo_mandatory">Url Logo*</string>
    <string name="hint_csv_data_path_mandatory">CSV Data Path*</string>
    <string name="default_csv_data_path">C:\\Users\\jurja\\Licenta_Aplicatie\\StockData</string>
    <string name="update_company_string">Update Company</string>
    <string name="update_message">Update</string>
    <string name="ready_for_prediction_label">Ready for prediction:</string>
    <string name="panel">Panel</string>
    <string name="update_stock_data_message">Update Stock Data Available</string>
    <string name="news">News</string>
    <string name="title_label">Title</string>
    <string name="author_label">Author</string>
    <string name="description">Description</string>
    <string name="company_details_title">Company Details</string>
    <string name="company_title">Company X</string>
    <string name="company_founded_year">Founded in %1$d</string>
    <string name="url_official_site_label">Official Site:</string>
    <string name="sample_link">www.sample.com</string>
    <string name="prediction_button_label">Predict</string>


    <string name="prediction_datepicker_title">Pick a date for prediction</string>
    <string name="prediction_for_date">Prediction starting date is: %1$s</string>
    <string name="classification_result_label">Classification result:</string>
    <string name="sample_classification_result">Increase</string>
    <string name="prediction_for_last_closing_price">Last input price: %1$.4f$</string>
    <string name="regression_result_label">Regression result:</string>
    <string name="sample_regression_result">%1$.4f$</string>
    <string name="historical_price_label">Historical prices</string>
    <string name="select_historical_price_label">Choose chart price interval</string>
    <string name="historical_month_label">21d</string>
    <string name="historical_three_months_label">63d</string>
    <string name="historical_year_label">252d</string>
    <string name="expected_prediction_for_closing_price">Expected closing price is: %1$s$</string>
    <string name="no_feedback_messages_available">No feedback messages available</string>
</resources>
