<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/adminMainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/main" />
        <item
            android:id="@+id/adminPanelFragment"
            android:icon="@drawable/ic_menu"
            android:title="@string/panel" />
        <item
            android:id="@+id/adminFeedbackFragment"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/adminProfileFragment"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/user_profile"/>
    </group>
</menu>