<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/clientMainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/main" />
        <item
            android:id="@+id/clientNewsFragment"
            android:icon="@drawable/ic_view_list"
            android:title="@string/news" />
        <item
            android:id="@+id/clientFeedbackFragment"
            android:icon="@drawable/ic_feedback"
            android:title="@string/feedback" />
        <item
            android:id="@+id/clientProfileFragment"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/user_profile"/>
    </group>
</menu>