<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/financialforecasting_green_700"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/username"
        android:src="@mipmap/ic_launcher_round"/>
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/app_name"
        style="?attr/textAppearanceHeadline4"
        android:textColor="@color/color_primary"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/admin_drawer_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sample_email"
        style="?attr/textAppearanceHeadline4"
        android:textColor="@color/color_primary"
        />
</LinearLayout>