<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/horizontal_gutters"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_gutters">

            <LinearLayout
                android:id="@+id/prediction_basic_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_name_text_view"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company_title" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_symbol_text_view"
                    style="?attr/textAppearanceHeadline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_company_symbol" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_prediction_date_text_view"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prediction_for_date" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_last_closing_price_text_view"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/prediction_for_last_closing_price" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_expected_prediction_test_view"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expected_prediction_for_closing_price" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/prediction_classification_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prediction_basic_information_layout">

                <View
                    android:id="@+id/title_horizontal_divider"
                    style="?attr/dividerStyleHorizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_classification_result_label"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/classification_result_label" />

                <LinearLayout
                    android:id="@+id/prediction_classification_result_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/classification_image_view"
                        android:layout_width="72sp"
                        android:layout_height="72sp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_trending_up"
                        android:tint="@color/financialforecasting_green_700" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/company_classification_result_text_view"
                        style="?attr/textAppearanceHeadline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_classification_result" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/prediction_regression_information_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prediction_classification_information_layout"
                app:layout_constraintBottom_toTopOf="@id/historical_price_layout">

                <View
                    android:id="@+id/classification_horizontal_divider"
                    style="?attr/dividerStyleHorizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_regression_result_label"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regression_result_label" />

                <LinearLayout
                    android:id="@+id/prediction_regression_result_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/regression_image_view"
                        android:layout_width="72sp"
                        android:layout_height="72sp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_trending_up"
                        android:tint="@color/financialforecasting_green_700" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/company_regression_result_text_view"
                        style="?attr/textAppearanceHeadline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sample_regression_result" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/historical_price_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/prediction_regression_information_layout"
                app:layout_constraintBottom_toBottomOf="parent">

                <View
                    android:id="@+id/regression_horizontal_divider"
                    style="?attr/dividerStyleHorizontal"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/company_historical_price_label"
                    style="?attr/textAppearanceHeadline4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/historical_price_label" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/company_historical_price_chart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="300dp"
                    android:layout_marginTop="16dp"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:theme="@style/Widget.FinancialForecasting.ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>