<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="?attr/colorSecondaryVariant">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_label"
            android:gravity="center_horizontal"
            style="?attr/textAppearanceHeadline4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/author_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_label"
            android:gravity="end"
            style="?attr/textAppearanceHeadline4" />

        <ImageView
            android:id="@+id/news_image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="400dp"
            android:minHeight="200dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_broken_image"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/description_text_view"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_gutters"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/horizontal_gutters"
            android:background="?attr/colorSecondary"
            android:maxLines="10"
            android:minLines="3"
            android:text="@string/description"
            android:textAppearance="?attr/textAppearanceBody1"
            android:layout_marginBottom="8dp"/>

        <View
            android:id="@+id/end_divider"
            android:layout_marginTop="8dp"
            style="?attr/dividerStyleHorizontal" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>