<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_home"
        android:tint="@color/financialforecasting_green_700"
        app:layout_constraintBottom_toTopOf="@id/input_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_gutters"
        android:layout_marginEnd="@dimen/horizontal_gutters"
        android:focusableInTouchMode="true"
        app:boxBackgroundColor="?attr/colorSecondary"
        app:boxStrokeColor="@color/color_list_input"
        app:endIconDrawable="@drawable/ic_done"
        app:endIconMode="custom"
        app:endIconTint="@color/financialforecasting_green_500"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:errorIconTint="@color/color_error"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@id/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:hint="@string/hint_email_mandatory"
            android:inputType="textEmailAddress"
            android:padding="0dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:focusableInTouchMode="true"
        app:boxBackgroundColor="?attr/colorSecondary"
        app:boxStrokeColor="@color/color_list_input"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/input_email"
        app:layout_constraintStart_toStartOf="@id/input_email"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_password_mandatory"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:padding="0dp"
            android:text="" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        style="@style/Widget.FinancialForecasting.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_message"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_account_text_view"
            style="@style/Widget.MaterialComponents.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_account" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/go_to_register_button"
            style="@style/Widget.FinancialForecasting.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/go_to_register" />
    </LinearLayout>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading_progress_bar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:theme="@style/Widget.FinancialForecasting.ProgressBar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>